# rust-link-shortener

./: Cargo.toml  Dockerfile
.github/: dependabot.yml
.github/workflows/: continuous-deployment.yml  continuous-integration.yml
src/: db.rs  handlers.rs  main.rs  model.rs
